updated mobile menu

--- a/header.html
+++ b/header.html
@@ -308,12 +308,11 @@
 
 
             <div class="mobile-header-img">
-                <a href="/"><img src="./assets/images/site-logo/sports-marine-logo-2.png" alt="Century Marine"></a>
+                <a href="/"><img src="./assets/images/site-logo/century-marine.webp" alt="Century Marine"></a>
             </div>
 
             <div class="custom-toggle-icon">
-                <img src="./assets/images/icons/bars.svg" alt="" class="bars-icon">
-                <img src="./assets/images/icons/close.svg" alt="" class="close-icon">
+                <span class="fa fa-bars bars-icon"></span>
             </div>
         </div>
 
@@ -333,14 +332,14 @@
             <div class="mobile-menus-box active" id="boats">
                 <ul>
 
-                    <li class="toggle-mobile-menu" data-title="expert-service"><a class="submenu-nav-link"
-                            href="javascript:void(0)">Expert Service</a></li>
                     <li class="toggle-mobile-menu" data-title="mobile-inventory"><a class="submenu-nav-link"
-                            href="javascript:void(0)">Inventory</a></li>
-                    <li><a class="submenu-nav-link" href="javascript:void(0)">Financing</a></li>
-                    <li class="toggle-mobile-menu" data-title="mobile-sports-marine"><a class="submenu-nav-link"
-                            href="javascript:void(0)">More From Century Marine</a></li>
-                    <li><a class="submenu-nav-link" href="javascript:void(0)">Contact</a></li>
+                            href="javascript:void(0)">Boat Sales</a></li>
+                    <li class="toggle-mobile-menu" data-title="expert-service"><a class="submenu-nav-link"
+                            href="javascript:void(0)">Service</a></li>
+                    <li><a class="submenu-nav-link" href="javascript:void(0)">Pro Shop</a></li>
+                    <li><a class="submenu-nav-link" href="javascript:void(0)">Events</a></li>
+                    <li class="toggle-mobile-menu" data-title="mobile-century-marine"><a class="submenu-nav-link"
+                            href="javascript:void(0)">Company</a></li>
 
                 </ul>
 
@@ -357,17 +356,16 @@
                 <p class="custom-close-icon"><span class="fa fa-angle-left"></span>&nbsp; Main Menu</p>
                 <h6>Boat Sales</h6>
             </div>
-            <ul>
 
-                <li><a class="dropdown-menu-link" href="/events">All Inventory</a></li>
-                <li><a class="dropdown-menu-link" href="/events">New Boats</a></li>
-                <li><a class="dropdown-menu-link" href="/events">Pre-Owned Boats</a></li>
-                <li><a class="dropdown-menu-link" href="/events">Promotional</a></li>
-                <li><a class="dropdown-menu-link" href="/events">Trailer Sales</a></li>
-                <li><a class="dropdown-menu-link" href="/events">Consign/Trade Your Boat</a></li>
-
-            </ul>
             <div>
+                <ul>
+                    <li><a class="dropdown-menu-link" href="/events">New Boats</a></li>
+                    <li><a class="dropdown-menu-link" href="/events">Pre-Owned Boats</a></li>
+                    <li><a class="dropdown-menu-link" href="/events">Wake Boats</a></li>
+                    <li><a class="dropdown-menu-link" href="/events">Pontoon boats</a></li>
+                    <li><a class="dropdown-menu-link" href="/events">Specials</a></li>
+
+                </ul>
 
             </div>
 
@@ -375,51 +373,24 @@
 
                 <div class="menu-logo">
                     <a href="javascript:void(0)">
-                        <img src="./assets/images/brands-logos/brand-icon-1.png" alt="">
+                        <img src="./assets/images/brands-logos/centurion-logo.webp" alt="">
                     </a>
                 </div>
 
                 <div class="menu-logo">
                     <a href="javascript:void(0)">
-                        <img src="./assets/images/brands-logos/brand-icon-2.png" alt="">
+                        <img src="./assets/images/brands-logos/supreme-logo.svg" alt="">
                     </a>
                 </div>
 
-                <div class="menu-logo">
-                    <a href="javascript:void(0)">
-                        <img src="./assets/images/brands-logos/brand-icon-3.png" alt="">
-                    </a>
-                </div>
+            </div>
 
-                <div class="menu-logo">
-                    <a href="javascript:void(0)">
-                        <img src="./assets/images/brands-logos/brand-icon-4.png" alt="">
-                    </a>
-                </div>
+            <div>
+                <ul>
+                    <li><a class="dropdown-menu-link" href="/sell-trade">Sell / Trade</a></li>
+                    <li><a class="dropdown-menu-link" href="/financing">Financing</a></li>
 
-                <div class="menu-logo">
-                    <a href="javascript:void(0)">
-                        <img src="./assets/images/brands-logos/brand-icon-5.png" alt="">
-                    </a>
-                </div>
-
-                <div class="menu-logo">
-                    <a href="/boats-for-sale?brand=Mastercraft">
-                        <img src="./assets/images/brands-logos/brand-icon-6.png" alt="">
-                    </a>
-                </div>
-
-                <div class="menu-logo">
-                    <a href="/boats-for-sale?brand=Regal">
-                        <img src="./assets/images/brands-logos/brand-icon-7.png" alt="">
-                    </a>
-                </div>
-
-                <div class="menu-logo">
-                    <a href="javascript:void(0)">
-                        <img src="./assets/images/brands-logos/brand-icon-8.png" alt="">
-                    </a>
-                </div>
+                </ul>
 
             </div>
         </div>
@@ -434,13 +405,9 @@
                 <li><a class="submenu-nav-link" href="/">Contact</a></li>
 
             </ul>
-            <!-- <div class="border-top">
-                <p>Newport News, VA 23602</p>
-                <h4>757.595.9333</h4>
-            </div> -->
         </div>
 
-        <div class="mobile-nav-box" id="expert-service">
+        <!-- <div class="mobile-nav-box" id="expert-service">
             <div class="dropdown-header">
                 <p class="custom-close-icon"><span class="fa fa-angle-left"></span>&nbsp; Main Menu</p>
                 <h6>Service</h6>
@@ -450,19 +417,21 @@
                 <li><a class="dropdown-menu-link" href="/">Engine Repower</a></li>
                 <li><a class="dropdown-menu-link" href="/">Seasonal Service</a></li>
             </ul>
-        </div>
+        </div> -->
 
-        <div class="mobile-nav-box" id="mobile-sports-marine">
+        <div class="mobile-nav-box" id="mobile-century-marine">
             <div class="dropdown-header">
                 <p class="custom-close-icon"><span class="fa fa-angle-left"></span>&nbsp; Main Menu</p>
-                <h6>More</h6>
             </div>
             <ul>
                 <li><a class="dropdown-menu-link" href="/">About Us</a></li>
-                <li><a class="dropdown-menu-link" href="/">Events & Promotions</a></li>
+                <li><a class="dropdown-menu-link" href="/">Adaptive Water Sports</a></li>
+                <li><a class="dropdown-menu-link" href="/">Lessons</a></li>
+            </ul>
+
+            <ul>
                 <li><a class="dropdown-menu-link" href="/">News & Articles</a></li>
-                <li><a class="dropdown-menu-link" href="/">Careers</a></li>
-                <li><a class="dropdown-menu-link" href="/">Contact</a></li>
+                <li><a class="dropdown-menu-link" href="/">Contact Us</a></li>
             </ul>
         </div>
     </div>
