--- a/home.html
+++ b/home.html
@@ -277,7 +277,7 @@
 
     <div class="home-banner">
         <video autoplay loop playsinline muted poster="">
-            <source src="./assets/videos/home-video/Home Page - Maverick Boats.mp4" type="video/mp4">
+            <source src="./assets/videos/home-video/Centurion-Boats-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
