addd brand section

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <body>
 
 
-<!-- desktop header start here -->
+    <!-- desktop header start here -->
 
     <div class="desktop-header">
         <div class="header-container">
@@ -313,7 +313,7 @@
     <!-- desktop header ends here -->
 
 
-        <div class="home-banner">
+    <div class="home-banner">
         <video autoplay loop playsinline muted poster="./assets/images/home/header-poster-image.webp">
             <source src="./assets/videos/home-video/Centurion-Boats-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -326,7 +326,22 @@
             </div>
         </div>
 
-        
+    </div>
+
+    <div class="brand-list">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="brand-img">
+                        <img src="./assets/images/brand-images/brand-img-1.webp" class="home-brand-img" alt="">
+
+                        <div class="brand-badge">
+                            <img src="./assets/images/brands-logos/centurion-logo.webp" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
