--- a/header.html
+++ b/header.html
@@ -118,136 +118,75 @@
                     <span> Close</span>
                 </div>
 
-                <div class="mega-menu-container">
-                    <div class="mega-menu-col-1">
-                        <div class="mega-menuinner-col">
-                            <h6>Inventory</h6>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3">
 
-                            <ul class="top-list-box">
-                                <li><a id="header-all-boats" href="/boats-for-sale">All Inventory</a></li>
-                                <li><a id="header-new-boats" href="/new-boats-for-sale">New Boats</a></li>
-                                <li><a id="header-used-boats" href="/used-pre-owned-boats-for-sale">Pre-Owned Boats</a>
-                                </li>
-                                <li><a id="header-trailers" href="javascript:void(0)">Promotional</a></li>
-                                <li><a id="header-motors" href="javascript:void(0)">Trailer Sales</a>
-                                </li>
-                            </ul>
+                            <div class="">
+                                <h6>SHOP</h6>
 
-                            <ul>
-                                <li><a id="header-Consign-cta" href="javascript:void(0)">Consign/Trade Your Boat</a>
-                                </li>
-                            </ul>
+                                <ul class="top-list-box">
+                                    <li><a id="header-new-boats" href="/new-boats-for-sale">New Boats</a></li>
+                                    <li><a id="header-used-boats" href="/used-pre-owned-boats-for-sale">Pre-Owned
+                                            Boats</a>
+                                    </li>
+                                    <li><a id="header-wake-boats" href="javascript:void(0)">Wake Boats</a></li>
+                                    <li><a id="header-pontoon-boats" href="javascript:void(0)">Pontoon Boats</a></li>
+                                    <li><a id="header-specials" href="javascript:void(0)">Specials</a></li>
+                                </ul>
 
-                        </div>
+                                <ul>
+                                    <li><a id="header-sell-trade" href="javascript:void(0)">Sell / Trade</a></li>
+                                    <li><a id="header-financing" href="javascript:void(0)">Financing</a></li>
+                                </ul>
 
-                        <div class="mega-menuinner-col">
-                            <h6>By Brand</h6>
-
-                            <ul class="top-list-box">
-                                <li><a id="header-cobia-cta" href="javascript:void(0)">Cobia</a></li>
-                                <li><a id="header-g3-boats-cta" href="javascript:void(0)">G3 Boats</a></li>
-                                <li><a id="header-key-west-cta" href="javascript:void(0)">Key West</a></li>
-                                <li><a id="header-waverick-cta" href="javascript:void(0)">Maverick</a></li>
-                                <li><a id="header-pathfinder-cta" href="javascript:void(0)">Pathfinder</a></li>
-                                <li><a id="header-sunCatcher-cta" href="javascript:void(0)">SunCatcher</a></li>
-                                <li><a id="header-sundance-cta" href="javascript:void(0)">Sundance</a></li>
-                                <li><a id="header-weldBilt-cta" href="javascript:void(0)">WeldBilt</a></li>
-                            </ul>
-                        </div>
-
-                    </div>
-                    <div class="mega-menu-col-2">
-
-
-                        <h5>By Type</h5>
-                        <div class="mega-boats-box">
-
-                            <div class="mega-boats-col">
-                                <div class="menu-card">
-                                    <a href="/boats-for-sale" id="header-boats">
-                                        <div class="menu-card-img">
-                                            <img src="./assets/images/mega-menu/mega-menu-img-1.jpg" class="menu-img"
-                                                alt="">
-                                        </div>
-                                        <div class="menu-card-title">
-                                            <h6>Boats</h6>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="mega-boats-col">
-                                <div class="menu-card">
-                                    <a href="/trailers-for-sale" id="header-trailers">
-                                        <div class="menu-card-img">
-                                            <img src="./assets/images/mega-menu/mega-menu-img-2.png" class="menu-img"
-                                                alt="">
-                                        </div>
-                                        <div class="menu-card-title">
-                                            <h6>Trailers</h6>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="mega-boats-col">
-                                <div class="menu-card">
-                                    <a href="/suzuki-outboard-engine-dealer-chapin-sc" id="header-motors">
-                                        <div class="menu-card-img">
-                                            <img src="./assets/images/mega-menu/mega-menu-img-3.png" class="menu-img"
-                                                alt="">
-                                        </div>
-                                        <div class="menu-card-title">
-                                            <h6>Motors</h6>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="mega-boats-col">
-                                <div class="menu-card">
-                                    <a href="/suzuki-outboard-engine-dealer-chapin-sc" id="header-motors">
-                                        <div class="menu-card-img">
-                                            <img src="./assets/images/mega-menu/mega-menu-img-4.png" class="menu-img"
-                                                alt="">
-                                        </div>
-                                        <div class="menu-card-title">
-                                            <h6>Motors</h6>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="mega-boats-col">
-                                <div class="menu-card">
-                                    <a href="/suzuki-outboard-engine-dealer-chapin-sc" id="header-motors">
-                                        <div class="menu-card-img">
-                                            <img src="./assets/images/mega-menu/mega-menu-img-5.png" class="menu-img"
-                                                alt="">
-                                        </div>
-                                        <div class="menu-card-title">
-                                            <h6>Motors</h6>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="mega-boats-col">
-                                <div class="menu-card">
-                                    <a href="/suzuki-outboard-engine-dealer-chapin-sc" id="header-motors">
-                                        <div class="menu-card-img">
-                                            <img src="./assets/images/mega-menu/mega-menu-img-6.png" class="menu-img"
-                                                alt="">
-                                        </div>
-                                        <div class="menu-card-title">
-                                            <h6>Motors</h6>
-                                        </div>
-                                    </a>
-                                </div>
                             </div>
 
                         </div>
 
+                        <div class="col-lg-9">
+
+                            <div class="">
+                                <h6>By Brand</h6>
+                                <div class="row">
+
+                                    <div class="col-md-6">
+                                        <div class="menu-card">
+                                            <a href="/boats-for-sale" id="header-centurion">
+                                                <div class="menu-card-img">
+                                                    <img src="./assets/images/mega-menu/mega-menu-img-1.jpg"
+                                                        class="menu-img" alt="Centurion Boats">
+                                                </div>
+                                                <div class="menu-card-logo">
+                                                    <img src="./assets/images/brands-logos/centurion-logo.webp"
+                                                        alt="Centurion Logo" class="menu-logo">
+                                                </div>
+                                                <div class="menu-cardhr"></div>
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="menu-card">
+                                            <a href="/trailers-for-sale" id="header-supreme">
+                                                <div class="menu-card-img">
+                                                    <img src="./assets/images/mega-menu/mega-menu-img-2.png"
+                                                        class="menu-img" alt="Supreme Boats">
+                                                </div>
+                                                <div class="menu-card-logo">
+                                                    <img src="./assets/images/brands-logos/supreme-logo.svg"
+                                                        alt="Supreme Logo" class="menu-logo">
+                                                </div>
+                                                <div class="menu-cardhr"></div>
+                                            </a>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -259,38 +198,44 @@
                     <span> Close</span>
                 </div>
 
-                <div class="mega-menu-container">
-                    <div class="service-mega-menu">
+                <div class="container">
+                    <div class="row">
 
-                        <a href="javascript:void(0)" class="service-dropdown-card">
-                            <div class="service-mega-menu-img">
-                                <img src="./assets/images/mega-menu/service-dropdown-img-1.jpg" alt="">
-                            </div>
+                        <div class="col-md-4">
+                            <a href="javascript:void(0)" class="service-dropdown-card">
+                                <div class="service-mega-menu-img">
+                                    <img src="./assets/images/mega-menu/service-dropdown-img-1.jpg" alt="">
+                                </div>
 
-                            <div class="service-mega-menu-title">
-                                <h6>Service Department</h6>
-                            </div>
-                        </a>
+                                <div class="service-mega-menu-title">
+                                    <h6>Service Department</h6>
+                                </div>
+                            </a>
+                        </div>
 
-                        <a href="javascript:void(0)" class="service-dropdown-card">
-                            <div class="service-mega-menu-img">
-                                <img src="./assets/images/mega-menu/service-dropdown-img-2.png" alt="">
-                            </div>
+                        <div class="col-md-4">
+                            <a href="javascript:void(0)" class="service-dropdown-card">
+                                <div class="service-mega-menu-img">
+                                    <img src="./assets/images/mega-menu/service-dropdown-img-2.png" alt="">
+                                </div>
 
-                            <div class="service-mega-menu-title">
-                                <h6>Service Department</h6>
-                            </div>
-                        </a>
+                                <div class="service-mega-menu-title">
+                                    <h6>Service Department</h6>
+                                </div>
+                            </a>
+                        </div>
 
-                        <a href="javascript:void(0)" class="service-dropdown-card">
-                            <div class="service-mega-menu-img">
-                                <img src="./assets/images/mega-menu/service-dropdown-img-3.png" alt="">
-                            </div>
+                        <div class="col-md-4">
+                            <a href="javascript:void(0)" class="service-dropdown-card">
+                                <div class="service-mega-menu-img">
+                                    <img src="./assets/images/mega-menu/service-dropdown-img-3.png" alt="">
+                                </div>
 
-                            <div class="service-mega-menu-title">
-                                <h6>Service Department</h6>
-                            </div>
-                        </a>
+                                <div class="service-mega-menu-title">
+                                    <h6>Service Department</h6>
+                                </div>
+                            </a>
+                        </div>
 
                     </div>
                 </div>
