--- a/lessons.html
+++ b/lessons.html
@@ -93,8 +93,15 @@
                 <div class="col-lg-5">
 
                     <form action="#" class="service-request-form">
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <div class="col-md-6 pr-lg-4">
+                                <div class="form-group">
+                                    <select name="lesson_location" id="lesson_location" class="service-form-control" placeholder="Select Location">
+                                        <option value="">Select Location</option>
+                                        <option value="">Arizona</option>
+                                        <option value="">Utah</option>
+                                    </select>
+                                </div>
                                 <div class="form-group">
                                     <input type="text" class="service-form-control" placeholder="First Name">
                                 </div>
@@ -110,31 +117,13 @@
                                 <div class="form-group">
                                     <input type="text" class="service-form-control" placeholder="Zip Code">
                                 </div>
-                            </div>
-                            <div class="col-md-6 pl-lg-4 border-left-d">
-                                <div class="form-group">
-                                    <input type="text" class="service-form-control" placeholder="Watercraft Year">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="service-form-control" placeholder="Make">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="service-form-control" placeholder="Model">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="service-form-control" placeholder="Hull ID">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="service-form-control" placeholder="Engine Make and Model">
-                                </div>
-                            </div>
-                            <div class="col-12">
+                            
                                 <div class="form-group">
                                     <textarea class="service-form-control" placeholder="Describe Service Needs" rows="1"></textarea>
                                 </div>
-                            </div>
-                            <div class="col-12 text-center">
-                                <button type="submit" class="theme-btn">SUBMIT</button>
+                                <div class="col-12 text-center">
+                                    <button type="submit" class="theme-btn">SUBMIT</button>
+                                </div>
                             </div>
                         </div>
                     </form>
