--- a/sell-trade.html
+++ b/sell-trade.html
@@ -100,6 +100,7 @@
 
     <section class="trade-form-sec py-80">
         <div class="container-century">
+            <h2 class="section-title text-center mb-lg-5 mb-3">Sell/Trade your Boat</h2>
             <div class="row text-center">
                 <div class="col-lg-8 mx-auto">
                     <div class="form-here">
